# panoramic_video

./: .gitignore  LICENSE  README.md  entry_points.cfg  setup.cfg
panoramic_video/: __init__.py  __main__.py  frame_writer.py  generator.py
