[metadata]
name = parnoramic_video
version = attr: panoramic_video.__version__
description = Panoramic video generator from panorama photograph image
long_description = file: README.md
license = MIT License
license_file = LICENSE
author = yamakox
url = https://github.com/yamakox/panoramic_video

[options]
zip_safe = False
packages = find:
install_requires =
  pillow
  numpy
  ffmpeg-python
entry_points = file: entry_points.cfg
